<?xml version="1.0" encoding="UTF-8"?>
<!-- STS PARENT POM -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springsource.ide.eclipse.commons</groupId>
	<artifactId>org.springsource.ide.eclipse.commons.parent</artifactId>
	<version>3.5.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<scm>
		<connection>scm:git:ssh://git.springsource.com:sts/eclipse-integration-commons.git</connection>
		<developerConnection>scm:git:ssh://git.springsource.com:sts/eclipse-integration-commons.git</developerConnection>
		<tag>HEAD</tag>
		<url>http://git.springsource.com/sts/eclipse-integration-commons</url>
	</scm>

	<modules>
		<module>org.springsource.ide.eclipse.commons.site</module>

		<module>org.springsource.ide.eclipse.commons-feature</module>
		<module>org.springsource.ide.eclipse.commons.test-feature</module>
		<module>org.springsource.ide.eclipse.dashboard-feature</module>

		<!-- quick search -->
		<module>org.springsource.ide.eclipse.commons.quicksearch.feature</module>
		<module>org.springsource.ide.eclipse.commons.quicksearch</module>
		<module>org.springsource.ide.eclipse.commons.quicksearch.test</module>

		<!-- getting started -->
		<module>org.springsource.ide.eclipse.commons.browser</module>
		<module>org.springsource.ide.eclipse.commons.gettingstarted</module>
		
		<module>org.springsource.ide.eclipse.commons.content.core</module>
		<module>org.springsource.ide.eclipse.commons.core</module>
		<module>org.springsource.ide.eclipse.commons.frameworks.core</module>
		<module>org.springsource.ide.eclipse.commons.frameworks.test.util</module>
		<module>org.springsource.ide.eclipse.commons.frameworks.ui</module>
		<module>org.springsource.ide.eclipse.commons.configurator</module>
		<module>org.springsource.ide.eclipse.commons.tests</module>
		<module>org.springsource.ide.eclipse.dashboard.ui</module>
		<module>org.springsource.ide.eclipse.commons.tests.util</module>
		<module>org.springsource.ide.eclipse.commons.ui</module>
		<module>org.springsource.ide.eclipse.commons.livexp</module>
		<module>org.springsource.ide.eclipse.commons.completions</module>

		<module>org.springframework.ide.eclipse.uaa</module>
		<module>org.springframework.ide.eclipse.uaa.feature</module>
		<module>org.springframework.ide.eclipse.uaa.feature.source</module>
	</modules>

	<!-- Common Configuration -->
	<organization>
		<name>Pivotal Software, Inc.</name>
		<url>http://spring.io</url>
	</organization>
	<url>http://spring.io/tools</url>
	<inceptionYear>2007</inceptionYear>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<issueManagement>
		<url>https://issuetracker.springsource.com/browse/STS</url>
		<system>JIRA</system>
	</issueManagement>

	<ciManagement>
		<url>https://build.springsource.com/browse/STS</url>
		<system>BAMBOO</system>
	</ciManagement>

	<properties>
		<!-- Eclipse Integration Commons Properties -->
		<p2.qualifier>SNAPSHOT</p2.qualifier>
		<p2.sign>false</p2.sign>
		<p2.repository.name>Eclipse Integration Commons</p2.repository.name>

		<!-- Signing -->
		<signing.skip>true</signing.skip>
		<signing.alias>vmware</signing.alias>
		<signing.keystore>~/.keytool/springsource.jks</signing.keystore>
		<signing.store.password>${STORE_PASSWORD}</signing.store.password>
		<signing.key.password>${KEY_PASSWORD}</signing.key.password>

		<!-- Common Properties -->
		<dist.name>Eclipse Integration Commons</dist.name>
		<dist.project>eclipse-integration-commons</dist.project>
		<dist.key>TOOLS</dist.key>
		<dist.target.classifier>eclipseintegrationcommons-${dist.target}</dist.target.classifier>

		<dist.type>snapshot</dist.type>
		<dist.bucket>dist.springsource.com</dist.bucket>
		<dist.platform.name></dist.platform.name>
		<dist.platform.version></dist.platform.version>
		<dist.platform.id></dist.platform.id>
		<dist.target></dist.target>
		<dist.properties>dist.properties</dist.properties>

		<dist.pathpostfix>nightly</dist.pathpostfix>
		<dist.path>${dist.type}/${dist.key}/${dist.project}/${dist.pathpostfix}/${dist.target}</dist.path>

		<skip.source.check>true</skip.source.check>

		<test.vmargs>${test.osvmargs}</test.vmargs>
		<test.osvmargs></test.osvmargs>
		<test.useUIThread>true</test.useUIThread>
		<test.skip>${maven.test.skip}</test.skip>

		<tycho-version>0.19.0</tycho-version>

		<maven.test.error.ignore>true</maven.test.error.ignore>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<encoding>UTF-8</encoding>
	</properties>

	<profiles>

		<profile>
			<id>e37</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<dist.target>e3.7</dist.target>
				<dist.platform.name>Indigo</dist.platform.name>
				<dist.platform.id>indigo</dist.platform.id>
				<dist.platform.version>3.7</dist.platform.version>
				<package.qualifierPrefix>e37</package.qualifierPrefix>
			</properties>
			<repositories>
				<repository>
					<id>platform</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/eclipse/updates/3.7/</url>
				</repository>
				<repository>
					<id>indigo</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/indigo/</url>
				</repository>
				<repository>
					<id>swtbot</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
				</repository>
				<repository>
					<id>javafx</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/efxclipse/updates-released/0.9.0/site</url>
				</repository>

			</repositories>
		</profile>

		<profile>
			<id>e43</id>
			<properties>
				<dist.target>e4.3</dist.target>
				<dist.platform.name>Kepler</dist.platform.name>
				<dist.platform.id>kepler</dist.platform.id>
				<dist.platform.version>4.3</dist.platform.version>
				<package.qualifierPrefix>e43</package.qualifierPrefix>
			</properties>
			<repositories>
				<repository>
					<id>platform</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/eclipse/updates/4.3/</url>
				</repository>
				<repository>
					<id>juno</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/kepler/</url>
				</repository>
				<repository>
					<id>swtbot</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/technology/swtbot/snapshots</url>
				</repository>
				<repository>
					<id>javafx</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/efxclipse/updates-released/0.9.0/site</url>
				</repository>
			</repositories>
		</profile>
		
		<profile>
			<id>e44</id>
			<properties>
				<dist.target>e4.4</dist.target>
				<dist.platform.name>Luna</dist.platform.name>
				<dist.platform.id>luna</dist.platform.id>
				<dist.platform.version>4.4</dist.platform.version>
				<package.qualifierPrefix>e44</package.qualifierPrefix>
			</properties>
			<repositories>
				<repository>
					<id>platform</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/eclipse/updates/4.4/</url>
				</repository>
				<repository>
					<id>juno</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/luna/</url>
				</repository>
				<repository>
					<id>swtbot</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/technology/swtbot/snapshots</url>
				</repository>
				<repository>
					<id>javafx</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/efxclipse/runtime-nightly/site/</url>
				</repository>
			</repositories>
		</profile>
		

		<profile>
			<id>build.springsource.com</id>
			<activation>
				<property>
					<name>bamboo.buildNumber</name>
				</property>
			</activation>
			<properties>
				<test.vmargs>-Dhttp.proxyHost=proxy.eng.vmware.com
					-Dhttp.proxyPort=3128 -Dhttps.proxyHost=proxy.eng.vmware.com
					-Dhttps.proxyPort=3128 ${test.osvmargs}</test.vmargs>
				<p2.qualifier>CI-B${bamboo.buildNumber}</p2.qualifier>
				<p2.replaceQualifier>true</p2.replaceQualifier>
			</properties>
		</profile>

		<profile>
			<id>osx</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://www.apple.com/</value>
				</property>
			</activation>
			<properties>
				<test.osvmargs>-Dosgi.ws=cocoa -XstartOnFirstThread</test.osvmargs>
			</properties>
		</profile>

		<profile>
			<id>bamboo-signing</id>
			<properties>
				<signing.store.password>${env.bamboo_signing_store_password}</signing.store.password>
				<signing.key.password>${env.bamboo_signing_key_password}</signing.key.password>
			</properties>
		</profile>

	</profiles>

	<repositories>

		<repository>
			<id>bundles</id>
			<layout>p2</layout>
			<url>file:///${basedir}/../bundles/repo</url>
		</repository>

		<repository>
			<id>mylyn</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/mylyn/releases/3.7</url>
		</repository>

		<repository>
			<id>orbit</id>
			<layout>p2</layout>
			<!-- More recent needed for HttpComponents. Use of api URIBuilder (used 
				only by new SpringBoot wizard) If we can replace with something else we can 
				keep on using this older orbit site -->
			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20120526062928/repository/</url>
			<!--  
			    Remove: repsonsible for this bug? 
			     <url>http://download.eclipse.org/tools/orbit/downloads/drops/I20131024145017/repository/</url>
			 -->
		</repository>

		<!-- required for Maven and Ant AWS dependency -->
		<repository>
			<id>springsource-maven-release</id>
			<name>SpringSource Maven Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<!-- required for commons-cli dependency in c.s.sts.grails.core -->
		<repository>
			<id>apache-release</id>
			<url>https://repository.apache.org/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>maven-mirror</id>
			<url>http://repo.exist.com/maven2</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- required for Maven and Ant AWS dependency -->
		<pluginRepository>
			<id>spring-maven-release</id>
			<name>Spring Maven Release Repository</name>
			<url>http://maven.springframework.org/release</url>
		</pluginRepository>
		<pluginRepository>
			<id>springsource-maven-release</id>
			<name>SpringSource Maven Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<extensions>
			<extension>
				<groupId>org.springframework.build.aws</groupId>
				<artifactId>org.springframework.build.aws.maven</artifactId>
				<version>3.1.0.RELEASE</version>
			</extension>
		</extensions>
		<plugins>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>git</executable>
					<arguments>
						<argument>log</argument>
						<argument>--pretty=format:source.control.id=%H</argument>
						<argument>-n1</argument>
					</arguments>
					<outputFile>${project.build.directory}/git.properties</outputFile>
					<successCodes>
						<successCode>0</successCode>
						<successCode>1</successCode>
						<successCode>127</successCode>
						<successCode>128</successCode>
					</successCodes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0-alpha-2</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>${project.build.directory}/git.properties</file>
							</files>
							<!-- do not fail if properties file does not exist to support, required 
								to build eclipse-repository projects -->
							<quiet>true</quiet>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<ignoreTychoRepositories>true</ignoreTychoRepositories>
					<environments>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>${signing.skip}</skip>
					<alias>${signing.alias}</alias>
					<keystore>${signing.keystore}</keystore>
					<storepass>${signing.store.password}</storepass>
					<keypass>${signing.key.password}</keypass>
					<arguments>
						<argument>-sigalg</argument><argument>SHA1withRSA</argument>
						<argument>-digestalg</argument><argument>SHA1</argument>
					</arguments>
				</configuration>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<format>yyyyMMddHHmm-'${p2.qualifier}'</format>
						<archiveSite>true</archiveSite>
						<archive>
							<manifestEntries>
								<Source-Control-Identifier>${source.control.id}</Source-Control-Identifier>
							</manifestEntries>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.3</version>
					<configuration>
						<encoding>ISO-8859-1</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.6</version>
					<dependencies>
						<dependency>
							<groupId>ant-contrib</groupId>
							<artifactId>ant-contrib</artifactId>
							<version>1.0b3</version>
							<exclusions>
								<exclusion>
									<groupId>ant</groupId>
									<artifactId>ant</artifactId>
								</exclusion>
							</exclusions>
						</dependency>
						<dependency>
							<groupId>org.apache.ant</groupId>
							<artifactId>ant-nodeps</artifactId>
							<version>1.8.1</version>
						</dependency>
						<dependency>
							<groupId>org.springframework.build</groupId>
							<artifactId>org.springframework.build.aws.ant</artifactId>
							<version>3.0.6.RELEASE</version>
						</dependency>
						<dependency>
							<groupId>net.java.dev.jets3t</groupId>
							<artifactId>jets3t</artifactId>
							<version>0.8.1</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
						<skip>${skip.source.check}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<sourceEncoding>utf-8</sourceEncoding>
						<minimumTokens>100</minimumTokens>
						<targetJdk>1.5</targetJdk>
						<format>xml</format>
						<failOnViolation>false</failOnViolation>
						<skip>${skip-source-check}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>cpd-check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<skip>${test.skip}</skip>
						<useUIThread>${test.useUIThread}</useUIThread>
						<useUIHarness>true</useUIHarness>
						<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
						<showEclipseLog>true</showEclipseLog>
						<testSuite>${project.artifactId}</testSuite>
						<testClass>${test.class}</testClass>
						<testFailureIgnore>true</testFailureIgnore>
						<argLine>
							-Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory}
							-Duser.home=${project.build.directory} ${test.vmargs}
						</argLine>
<!-- 					What's this?? It seems to stop test from running with e43 because keystore.password file not found.
						Commented out for now.
						<appArgLine>
							-eclipse.keyring ${project.build.directory}/keystore -eclipse.password
							${project.build.directory}/keystore.password
						</appArgLine> -->
						<dependencies>
							<dependency>
								<type>p2-installable-unit</type>
								<artifactId>org.eclipse.wst.server_ui.feature.feature.group</artifactId>
								<version>0.0.0</version>
							</dependency>
							<dependency>
								<type>p2-installable-unit</type>
								<artifactId>org.eclipse.jst.web_ui.feature.feature.group</artifactId>
								<version>0.0.0</version>
							</dependency>
							<dependency>
								<type>p2-installable-unit</type>
								<artifactId>org.eclipse.jst.enterprise_ui.feature.feature.group</artifactId>
								<version>0.0.0</version>
							</dependency>
						</dependencies>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
